--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@prisma/client": "^5.19.0",
     "axios": "^1.7.5",
     "mongoose": "^8.5.4",
     "next": "14.2.6",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18"
   },
