complete next-auth

--- a/nextauth2/.env
+++ b/nextauth2/.env
@@ -8,3 +8,10 @@ DATABASE_URL="postgresql://neondb_owner:0AiQGZILB9bw@ep-plain-salad-a5cr31io.us-
 
 NEXTWAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=thisisarandomsecret
+
+GOOGLE_id=63129414377-cd7s8hp0omnhsjbmrquomkrgqvo4d9lf.apps.googleusercontent.com
+
+GOOGLE_SECRET=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
+
+GITHUB_ID = Iv23lidVrwRcs3POQMSF
+GITHUB_SECRET = 7896715e0279cddaa8c677675106ddda218ade07
