--- a/nextauth2/package.json
+++ b/nextauth2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
